--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,10 +25,18 @@
             ><img src="{{ asset('images/logo_alternatif.png') }}" class="me-3 mb-1" width="50" alt="logo hospitime"
                 >HOSPITIME
                 </a>
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    {% block nav_item %}{% endblock %}
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0" >
+                    {% block nav_item %}
+                        {% if is_granted('ROLE_HEALTH_PROFESSIONAL') %}
+                        <h5>
+                            <li>
+                                <a class="btn btn-light navbarButton" role="button" href="{{ path('app_availability_show', {id: app.user.id}) }}">MES DISPONIBILITÉS</a>
+                            </li>
+                        </h5>
+                        {% endif %}
+                    {% endblock %}
                 </ul>
-            </div>
+        </div>
     </nav>
 
     {% block body %}{% endblock %}
