--- a/templates/availability/_form.html.twig
+++ b/templates/availability/_form.html.twig
@@ -5,19 +5,24 @@
 {% endblock %}
 
 {% block body %}
-<div class="container mt-5">
-    <div class="row justify-content-center">
-        <div class="card shadow p-4 col-md-6 mb-4">
-            <h1>{{ titlePage }}</h1>
-                {{ form_start(form) }}
-                    {{ form_row(form.date, {label: 'Date de disponibilité'}) }}
-                    {{ form_row(form.startTime, {label: 'Heure de début'}) }}
-                    {{ form_row(form.endTime, {label: 'Heure de fin'}) }}
-                    {{ form_row(form.recurrenceType, {label: 'Ajouter une récurrence', value: recurrenceType}) }}
-                    <input type="submit" value="{{ submit_label }}"
-                                   class="btn btn-primary"/>
-                {{ form_end(form) }}
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="card shadow p-4 col-md-6 mb-4">
+                {% for label, messages in app.flashes %}
+                    {% for message in messages %}
+                        <div class="alert alert-danger" role="alert">{{ message }}</div>
+                    {% endfor %}
+                {% endfor %}
+                <h1>{{ titlePage }}</h1>
+                    {{ form_start(form) }}
+                        {{ form_row(form.date, {label: 'Date de disponibilité'}) }}
+                        {{ form_row(form.startTime, {label: 'Heure de début'}) }}
+                        {{ form_row(form.endTime, {label: 'Heure de fin'}) }}
+                        {{ form_row(form.recurrenceType, {label: 'Ajouter une récurrence', value: recurrenceType}) }}
+                        <input type="submit" value="{{ submit_label }}"
+                                       class="btn btn-primary"/>
+                    {{ form_end(form) }}
+            </div>
         </div>
     </div>
-</div>
 {% endblock %}
