Ajout d'un style cohérent avec le reste du projet

--- a/templates/patient/appointment.html.twig
+++ b/templates/patient/appointment.html.twig
@@ -5,10 +5,25 @@
 {% endblock %}
 
 {% block body %}
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-lg-6 col-12 mb-4">
+                <div class="card shadow p-4">
+                    <h2>Mes consultations futures</h2>
+                    <div class="table-responsive">
+                        {{ include('patient/_appointment.html.twig', {appointments: futurAppointments}) }}
+                    </div>
+                </div>
+            </div>
 
-    <h1>Mes consultations futures</h1>
-    {{ include('patient/_appointment.html.twig', {appointments: futurAppointments}) }}
-
-    <h1>Mes consultations passées</h1>
-    {{ include('patient/_appointment.html.twig', {appointments: pastAppointments}) }}
+            <div class="col-lg-6 col-12 mb-4">
+                <div class="card shadow p-4">
+                    <h2>Mes consultations passées</h2>
+                    <div class="table-responsive">
+                        {{ include('patient/_appointment.html.twig', {appointments: pastAppointments}) }}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
