Ajout du ROLES_USER pour le CRUD de Consultation et correction du twig avec twig cs fixer

--- a/templates/consultation/delete_medical_appointment.html.twig
+++ b/templates/consultation/delete_medical_appointment.html.twig
@@ -1,14 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% set title = "Suppression du rendez-vous de " %}
-
+{% set title = 'Suppression du rendez-vous de ' %}
 
 {% block title %}
 
     {{ title }} {{ patient.lastname }} {{ patient.firstname }}
 
 {% endblock %}
-
 
 {% block body %}
 
