--- a/templates/user/update.html.twig
+++ b/templates/user/update.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% set titre = 'Édition du compte de ' ~ user.lastName ~ ', ' ~ user.firstName %}
 
 {% block title %}
     {{ titre }}
