--- a/templates/user/update.html.twig
+++ b/templates/user/update.html.twig
@@ -6,17 +6,24 @@
     {{ titre }}
 {% endblock %}
 {% block body %}
-    <h1>{{ titre }}</h1>
-    {% for label, messages in app.flashes %}
-        {% for message in messages %}
-            <div class="alert alert-{{ label }}">
-                {{ message }}
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="card shadow p-4 col-md-6">
+                <h1>{{ titre }}</h1>
+                {% for label, messages in app.flashes %}
+                    {% for message in messages %}
+                        <div class="alert alert-{{ label }}">
+                            {{ message }}
+                        </div>
+                    {% endfor %}
+                {% endfor %}
+                {{ form_errors(form) }}
+                {{ form_start(form) }}
+                {{ form_widget(form) }}
+                <button type="submit" class="btn">Mettre à jour le compte</button>
+                {{ form_end(form) }}
             </div>
-        {% endfor %}
-    {% endfor %}
-    {{ form_errors(form) }}
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button type="submit" class="btn">Mettre à jour le compte</button>
-    {{ form_end(form) }}
+        </div>
+    </div>
+
 {% endblock %}
