--- a/templates/user/delete.html.twig
+++ b/templates/user/delete.html.twig
@@ -6,9 +6,16 @@
     {{ titre }}
 {% endblock %}
 {% block body %}
-    <h1>{{ titre }}</h1>
-    {{ form_errors(form) }}
-    {{ form_start(form) }}
-    {{ form_widget(form) }}
-    {{ form_end(form) }}
+    <div class="container mt-5">
+        <div class="row justify-content-center">
+            <div class="card shadow p-4 col-md-6">
+                <h1>{{ titre }}</h1>
+                {{ form_errors(form) }}
+                {{ form_start(form) }}
+                {{ form_widget(form) }}
+                {{ form_end(form) }}
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
