--- a/templates/consultation/_form.html.twig
+++ b/templates/consultation/_form.html.twig
@@ -18,14 +18,14 @@
                     {{ form_row(form.date, {label: 'Date de consultation'}) }}
                     {{ form_row(form.startTime, {label: 'Heure de début'}) }}
                     {{ form_row(form.endTime, {label: 'Heure de fin'}) }}
-                    {{ form_row(form.room, {label: 'Salle de consultation'}) }}
                     {{ form_row(form.consultationType, {label: 'Type de consultation'}) }}
-                {% if isPatient %}
+                {% if is_granted('ROLE_PATIENT') %}
                     {{ form_row(form.healthProfessional, {label: 'Praticien'}) }}
                 {% else %}
                     {{ form_row(form.patient, {label: 'Patient'}) }}
+                    {{ form_row(form.room, {label: 'Salle de consultation'}) }}
                 {% endif %}
-                    <input type="submit" value="{{ submit_label }}" class="btn btn-primary" />
+                <input type="submit" value="{{ submit_label }}" class="btn btn-primary" />
                 {{ form_end(form) }}
             </div>
         </div>
