--- a/templates/patient/_appointment.html.twig
+++ b/templates/patient/_appointment.html.twig
@@ -4,6 +4,7 @@
         <th>Heure de Début</th>
         <th>Heure de Fin</th>
         <th>Praticien</th>
+        <th>Actions</th>
     </tr>
     {% if appointments is not empty %}
         {% for appointment in appointments %}
@@ -25,6 +26,14 @@
                         ]) %}
                     {% endfor %}
                     {{ healthprofessionalArray|join(', ') }}
+                </td>
+                <td>
+                    <a href="{{ path('update_medical_appointment', {'id': appointment.id}) }}" class="text-primary" title="Modifier">
+                        <span class="material-symbols-outlined">edit</span>
+                    </a>
+                    <a href="{{ path('delete_medical_appointment', {'id': appointment.id}) }}" class="text-danger" title="Supprimer" onclick="return confirm('Êtes-vous sûr de vouloir supprimer cette consultation ?')">
+                        <span class="material-symbols-outlined">delete</span>
+                    </a>
                 </td>
             </tr>
         {% endfor %}
