--- a/templates/home/user_home.html.twig
+++ b/templates/home/user_home.html.twig
@@ -1,9 +1,65 @@
 {% extends 'base.html.twig' %}
 
+{% block nav_item %}
+    {% if is_granted('ROLE_PATIENT') %}
+        <li>
+            <a class="nav-link active btn btn-outline-light me-5 ms-5" aria-current="page" href="{{ path('app_user_appointments') }}">Mes rendez-vous</a>
+        </li>
+        <li>
+            <a class="nav-link active btn btn-outline-light me-5" aria-current="page" href="#">Prendre un rendez-vous</a>
+        </li>
+        <li>
+            <a class="nav-link active btn btn-outline-light me-5" aria-current="page" href="{{ path('app_faq') }}">Voir la FAQ</a>
+        </li>
+    {% elseif is_granted('ROLE_HEALTH_PROFESSIONAL') %}
+    {% endif %}
+{% endblock %}
+
 {% block body %}
+    <div class="container mt-4">
+        <div class="row">
+            <h1 class="mb-5">Bonjour {{ user.firstname }} !</h1>
+        </div>
+    {% if is_granted('ROLE_PATIENT') %}
+        {% if consultations is not empty %}
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="d-flex justify-content-between align-items-center mb-3">
+                        <h2>📅 Voir vos {{ consultations|length > 3 ? 3 : consultations|length }} prochains rendez-vous :</h2>
+                        <a class="btn btn-outline-danger btn-sm" href="{{ path('app_user_appointments') }}">Voir tous mes rendez-vous</a>
+                    </div>
+                    <div class="table-responsive rounded">
+                        <table class="table table-striped table-hover">
+                            <thead class="table-dark">
+                            <tr>
+                                <th scope="col">Date</th>
+                                <th scope="col">Heure de Début</th>
+                                <th scope="col">Heure de Fin</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for consultation in consultations | slice(0, 3) %}
+                                <tr>
+                                    <td>{{ consultation.date|date('d/m/Y') }}</td>
+                                    <td>{{ consultation.startTime|date('H:i') }}</td>
+                                    <td>{{ consultation.endTime|date('H:i') }}</td>
+                                </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
 
-    <h1>Hello {{ user.firstname }}</h1>
+                    </div>
+                </div>
+            </div>
+        {% else %}
+            <p>Vous n'avez pas de rdv</p>
+        {% endif %}
 
+    {% elseif is_granted('ROLE_HEALTH_PROFESSIONAL') %}
+        <h1>Vous etes un professionel de santé</h1>
+    {% endif %}
+
+    </div>
 {% endblock %}
 
 {% block title %}
