Ajout des nav link dans le templates de base

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,7 +26,29 @@
                 >HOSPITIME
                 </a>
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    {% block nav_item %}{% endblock %}
+                    {% block nav_item %}
+                        {% if is_granted('ROLE_PATIENT') %}
+                            <li>
+                                <a class="nav-link active btn btn-outline-light me-5 ms-5" aria-current="page" href="{{ path('app_user_appointments') }}">Mes rendez-vous</a>
+                            </li>
+                            <li>
+                                <a class="nav-link active btn btn-outline-light me-5" aria-current="page" href="#">Prendre un rendez-vous</a>
+                            </li>
+                            <li>
+                                <a class="nav-link active btn btn-outline-light me-5" aria-current="page" href="{{ path('app_faq') }}">Voir la FAQ</a>
+                            </li>
+                        {% elseif is_granted('ROLE_HEALTH_PROFESSIONAL') %}
+                            <li>
+                                <a class="nav-link active btn btn-outline-light me-5 ms-5" aria-current="page" href="{{ path('app_health_professional_calendar') }}">Mes consultations</a>
+                            </li>
+                            <li>
+                                <a class="nav-link active btn btn-outline-light me-5" aria-current="page" href="">Voir mes disponibilités</a>
+                            </li>
+                            <li>
+                                <a class="nav-link active btn btn-outline-light me-5" aria-current="page" href="">Réserver matériel</a>
+                            </li>
+                        {% endif %}
+                    {% endblock %}
                 </ul>
             </div>
     </nav>
