--- a/templates/home/user_home.html.twig
+++ b/templates/home/user_home.html.twig
@@ -1,32 +1,26 @@
 {% extends 'base.html.twig' %}
 
-{% block nav_item %}
-    {% if is_granted('ROLE_PATIENT') %}
-        <li>
-            <a class="nav-link active btn btn-outline-light me-5 ms-5" aria-current="page" href="{{ path('app_user_appointments') }}">Mes rendez-vous</a>
-        </li>
-        <li>
-            <a class="nav-link active btn btn-outline-light me-5" aria-current="page" href="#">Prendre un rendez-vous</a>
-        </li>
-        <li>
-            <a class="nav-link active btn btn-outline-light me-5" aria-current="page" href="{{ path('app_faq') }}">Voir la FAQ</a>
-        </li>
-    {% elseif is_granted('ROLE_HEALTH_PROFESSIONAL') %}
-    {% endif %}
-{% endblock %}
+{% block title %}Home{% endblock %}
 
 {% block body %}
+
+    {% if is_granted('ROLE_PATIENT') %}
+        {% set show_cons_btn_redirection = path('app_user_appointments') %}
+    {% elseif is_granted('ROLE_HEALTH_PROFESSIONAL') %}
+        {% set show_cons_btn_redirection = path('app_health_professional_calendar') %}
+    {% endif %}
+
     <div class="container mt-4">
         <div class="row">
             <h1 class="mb-5">Bonjour {{ user.firstname }} !</h1>
         </div>
-    {% if is_granted('ROLE_PATIENT') %}
+
         {% if consultations is not empty %}
             <div class="row">
                 <div class="col-md-12">
                     <div class="d-flex justify-content-between align-items-center mb-3">
-                        <h2>📅 Voir vos {{ consultations|length > 3 ? 3 : consultations|length }} prochains rendez-vous :</h2>
-                        <a class="btn btn-outline-danger btn-sm" href="{{ path('app_user_appointments') }}">Voir tous mes rendez-vous</a>
+                        <h2>📅 Voir vos {{ consultations|length > 3 ? 3 : consultations|length }} prochaines consultations  :</h2>
+                        <a class="btn btn-outline-danger btn-sm" href="{{ show_cons_btn_redirection }}">Voir toutes mes prochaines consultations</a>
                     </div>
                     <div class="table-responsive rounded">
                         <table class="table table-striped table-hover">
@@ -47,22 +41,19 @@
                             {% endfor %}
                             </tbody>
                         </table>
-
                     </div>
                 </div>
             </div>
         {% else %}
-            <p>Vous n'avez pas de rdv</p>
+            <div class="alert alert-info text-center mt-4" role="alert">
+                <h4 class="alert-heading">Pas de consultations prévues</h4>
+                <p>Vous n'avez actuellement aucune consultation programmée.</p>
+                {% if is_granted('ROLE_PATIENT') %}
+                    <hr>
+                    <p class="mb-0">N'hésitez pas à en planifier une prochainement.</p>
+                {% endif %}
+            </div>
         {% endif %}
-
-    {% elseif is_granted('ROLE_HEALTH_PROFESSIONAL') %}
-        <h1>Vous etes un professionel de santé</h1>
-    {% endif %}
-
     </div>
-{% endblock %}
-
-{% block title %}
 
 {% endblock %}
-
