--- a/templates/user/update.html.twig
+++ b/templates/user/update.html.twig
@@ -20,7 +20,7 @@
                 {{ form_errors(form) }}
                 {{ form_start(form) }}
                 {{ form_widget(form) }}
-                <button type="submit" class="btn">Mettre à jour le compte</button>
+                <button type="submit" class="btn btn-lg btn-danger mt-4">Mettre à jour le compte</button>
                 {{ form_end(form) }}
             </div>
         </div>
