--- a/templates/availability/_showAll.html.twig
+++ b/templates/availability/_showAll.html.twig
@@ -29,7 +29,7 @@
                 {% endif %}
                 <td>
                     <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modal-{{ availability.id }}">
-                        Aperçu
+                        Créneaux
                     </button>
                 </td>
 
