--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -5,3 +5,9 @@ nav {
 .navbarButton {
     color: #C1170A;
 }
+
+.signature-container {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 10px;
+}
