--- a/templates/consultation/prescription.html.twig
+++ b/templates/consultation/prescription.html.twig
@@ -2,10 +2,26 @@
 
 {% block title %}Ajouter une ordonnance{% endblock %}
 
+{% block javascripts %}
+    <script src="https://cdn.jsdelivr.net/npm/signature_pad@4.0.0/dist/signature_pad.umd.min.js"></script>
+    <script src="{{ asset('js/Signature.js') }}"></script>
+{% endblock %}
+
 {% block body %}
-    <h1>Ajouter une ordonnance pour la consultation</h1>
-    {{ form_start(form) }}
-        {{ form_row(form.texte) }}
-        <button class="btn btn-primary">Enregistrer l'ordonnance</button>
-    {{ form_end(form) }}
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="card shadow p-4 col-md-6 mb-4">
+            <h1>Ajouter une ordonnance pour la consultation</h1>
+            {{ form_start(form) }}
+                {{ form_row(form.texte) }}
+                <div class="signature-container">
+                    <label for="signatureCanvas" class="form-label">Signature</label>
+                    <canvas id="signatureCanvas" class="border rounded"></canvas>
+                </div>
+                <input id="signatureField" type="hidden" name="signature">
+                <button class="btn btn-primary">Enregistrer l'ordonnance</button>
+            {{ form_end(form) }}
+        </div>
+    </div>
+</div>
 {% endblock %}
