Ajout de la signature dans les téléchargements d'ordonnances

--- a/templates/consultation/prescription_pdf.html.twig
+++ b/templates/consultation/prescription_pdf.html.twig
@@ -33,5 +33,6 @@
         <div class="content">
             <p>{{ consultation.prescription }}</p>
         </div>
+        <img src="{{ consultation.signature }}" alt="signature">
     </body>
 </html>
