Ajout des vérifications de sécurité pour l'action prescription et renommage d'un champ du formulaire

--- a/templates/consultation/prescription.html.twig
+++ b/templates/consultation/prescription.html.twig
@@ -13,7 +13,7 @@
         <div class="card shadow p-4 col-md-6 mb-4">
             <h1>Ajouter une ordonnance pour la consultation</h1>
             {{ form_start(form) }}
-                {{ form_row(form.texte) }}
+                {{ form_row(form.prescription) }}
                 <div class="signature-container">
                     <label for="signatureCanvas" class="form-label">Signature</label>
                     <canvas id="signatureCanvas" class="border rounded"></canvas>
