Suppression d'une variable inutile

--- a/templates/consultation/create.html.twig
+++ b/templates/consultation/create.html.twig
@@ -3,4 +3,4 @@
 {% set titlePage = "Création d'une consultation" %}
 
  {{ include(('consultation/_form.html.twig'), {submit_label: 'Création',
-     form: form, titlePage: titlePage, isPatient}, with_context = false) }}
+     form: form, titlePage: titlePage}, with_context = false) }}
