--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -21,6 +21,12 @@
     </head>
     <body>
 
+    {% if app.user %}
+        {% set home_btn_redirection = path('app_home_user') %}
+    {% else %}
+        {% set home_btn_redirection = path('app_home') %}
+    {% endif %}
+
     <nav class="navbar navbar-expand-lg text-primary font-weight-bold">
         <div class="container-fluid">
             <a class="navbar-brand text-white h1 fs-1 mt-2" href="#"
