--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -29,7 +29,7 @@
 
     <nav class="navbar navbar-expand-lg text-primary font-weight-bold">
         <div class="container-fluid">
-            <a class="navbar-brand text-white h1 fs-1 mt-2" href="#"
+            <a class="navbar-brand text-white h1 fs-1 mt-2" href="{{ home_btn_redirection }}"
             ><img src="{{ asset('images/logo_alternatif.png') }}" class="me-3 mb-1" width="50" alt="logo hospitime"
                 >HOSPITIME
                 </a>
