--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,6 +58,17 @@
                         {% endif %}
                     {% endblock %}
                 </ul>
+                <ul class="navbar-nav">
+                    {% if app.user %}
+                        <li class="nav-item">
+                            <a class="active btn btn-outline-light me-5" href="{{ path('app_logout') }}">Se déconnecter</a>
+                        </li>
+                    {% else %}
+                        <li class="nav-item">
+                            <a class="active btn btn-outline-light me-5" href="{{ path('app_login') }}">Se connecter</a>
+                        </li>
+                    {% endif %}
+                </ul>
             </div>
     </nav>
 
