ajout d'une carte permettant de situer l'hôpital

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -25,5 +25,19 @@
             </div>
         </div>
     </div>
+    <div class="row text-center">
+        <div class="col-lg-12 mb-5">
+            <h1 class="display-5 mb-3">Où pouvez-vous nous trouver ?</h1>
+            <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2603.6273434660384!2d4.0464496769846345!3d49.26450887204031!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e975b86b85aab3%3A0xdda0886abe3e44fc!2sCHU%20de%20Reims%20-%20H%C3%B4pital%20S%C3%A9bastopol!5e0!3m2!1sfr!2sfr!4v1736027059132!5m2!1sfr!2sfr"
+                    width="100%"
+                    height="500"
+                    style="border:0;"
+                    allowfullscreen=""
+                    loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
+    </div>
 </div>
 {% endblock %}
