--- a/templates/consultation/prescription.html.twig
+++ b/templates/consultation/prescription.html.twig
@@ -19,7 +19,7 @@
                     <canvas id="signatureCanvas" class="border rounded"></canvas>
                 </div>
                 <input id="signatureField" type="hidden" name="signature">
-                <button class="btn btn-primary">Enregistrer l'ordonnance</button>
+                <button class="btn btn-primary signature-button">Enregistrer l'ordonnance</button>
             {{ form_end(form) }}
         </div>
     </div>
